--- a/Victor/app/package.json
+++ b/Victor/app/package.json
@@ -4,6 +4,7 @@
     "description": "Example credential application",
     "dependencies": {
         "bootstrap": "^4.3.1",
-        "jquery": "3.5.0"
+        "jquery": "3.5.0",
+        "sqlite3": "4.2.0"
     }
 }
